# optionally_const

./: Cargo.toml  README.md
optionally_const/: Cargo.toml  README.md
optionally_const/src/: lib.rs
optionally_const_macros/: Cargo.toml  README.md
optionally_const_macros/src/: lib.rs
optionally_const_tests/: Cargo.toml
optionally_const_tests/src/: main.rs
optionally_const_tests/tests/: fieldless_enum.rs
