[package]
name = "optionally_const"
version = "0.1.0"
edition = "2024"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
description = "Optional constness on stable Rust."
documentation = "https://docs.rs/optionally_const"
readme = "README.md"
keywords = [
    "optional",
    "const",
    "maybe",
]
categories = [
    "no-std",
    "rust-patterns",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/optionally_const"
