[package]
name = "optionally_const"
version = "0.2.1"
edition = "2024"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
description = "Optional constness on stable Rust."
documentation = "https://docs.rs/optionally_const"
readme = "README.md"
keywords = [
    "optional",
    "const",
    "maybe",
]
categories = [
    "no-std",
    "rust-patterns",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/optionally_const"

[dependencies]
optionally_const_macros = { path = "../optionally_const_macros", optional = true, version = "0.2.0" }

[features]
derive = ["dep:optionally_const_macros"]

[package.metadata.docs.rs]
features = ["derive"]
rustdoc-args = ["--cfg", "docsrs"]
