[package]
name = "optionally_const_macros"
version = "0.6.1"
edition = "2024"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
description = "Proc-macro crate for optionally_const."
documentation = "https://docs.rs/optionally_const_macros"
readme = "README.md"
keywords = [
    "optional",
    "const",
    "maybe",
]
categories = [
    "rust-patterns",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/optionally_const"

[dependencies]
# 2.0.100
syn = { version = "2", features = ["full"] }
# 1.0.40
quote = "1"
# 1.0.95
proc-macro2 = "1"
derive-syn-parse = "0.2.0"

[dev-dependencies]
optionally_const = { path = "../optionally_const", features = ["derive"] }

[lib]
proc-macro = true
